update css custom

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=ss">
+    <link rel="stylesheet" href="assets/css/style.css?a=adaaa3">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -14,8 +14,8 @@
         <div class="one sky">
             <div class="container">
                 <div class="row margin-bottom-20">
-                    <div class="col-md-12 one-title-first margin-bottom-40 ">
-                        <h2>Future Brand</h2>
+                    <div class="col-md-12 one-title-first margin-bottom-20 ">
+                        <h2>FutureBrand</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -24,7 +24,7 @@
                         The<br />
                         creative<br />
                         future<br />
-                        company.
+                        <span class="sub-line">com</span>pany.
                         <p>
                     </div>
                 </div>
@@ -50,16 +50,16 @@
             </div>
         </div>
 
-        <div class="two white">
+        <div class="two white-gray">
             <div class="container">
                 <div class="row margin-bottom-30">
-                    <div class="col-md-4 red box-left"></div>
-                    <div class="col-md-4 text-center box-center blue">
+                    <div class="col-md-3 box-left"></div>
+                    <div class="col-md-6 text-center box-center ">
                         <div class="box-title">
                             <h2>¿Cómo nace este estudio?</h2>
                         </div>
                     </div>
-                    <div class="col-md-4 red box-right"></div>
+                    <div class="col-md-3 box-right"></div>
                 </div>
                 <div class="row margin-bottom-35">
                     <div class="col-md-12 two-description  ">
@@ -98,13 +98,13 @@
         <div class="three orange">
             <div class="container">
                 <div class="row margin-bottom-30">
-                    <div class="col-md-4 red box-left"></div>
-                    <div class="col-md-4 text-center box-center blue">
+                    <div class="col-md-3 box-left"></div>
+                    <div class="col-md-6 text-center box-center ">
                         <div class="box-title orange">
                             <h2 class="text-color-white">Principales hallazgos</h2>
                         </div>
                     </div>
-                    <div class="col-md-4 red box-right"></div>
+                    <div class="col-md-3 box-right"></div>
                 </div>
                 <div class="row" style="height: 130px;">
                     <div class="col-md-1"></div>
@@ -142,11 +142,10 @@
                     <div class="col-md-1"></div>
                 </div>
 
-                <div class="row margin-bottom-60">
-                    <div class="col-md-12 text-left">
-                        
-                    </div>
-                </div>
+                <div class="row margin-bottom-60"></div>
+                <div class="row margin-bottom-60"></div>
+                <div class="row margin-bottom-60"></div>
+                <div class="row margin-bottom-30"></div>
 
 
             </div>
@@ -155,16 +154,16 @@
         <div class="four white">
             <div class="container">
                 <div class="row margin-bottom-30">
-                    <div class="col-md-4 red box-left"></div>
-                    <div class="col-md-4 text-center box-center blue">
+                    <div class="col-md-3 box-left"></div>
+                    <div class="col-md-6 text-center box-center">
                         <div class="box-title">
                             <h2>¿Por qué es importante ser una “future brand”?</h2>
                         </div>
                     </div>
-                    <div class="col-md-4 red box-right"></div>
+                    <div class="col-md-3 box-right"></div>
                 </div>
 
-                <div class="row margin-bottom-65">
+                <div class="row margin-bottom-60">
                     <div class="col-md-12 two-description  ">
                         <p>El estudio demuestra que cuando las personas clasifican a una marca como una “future brand”, la intención de querer comprar uno de sus productos y trabajar en la empresa es casi 3 veces mayor en comparación con una marca corporativa.</p>
                         <p>De esta manera ser una “future brand” influye en la elección de los productos y servicios que se deciden comprar, así como también tiene un impacto en el lugar donde se elige trabajar.</p>
@@ -210,7 +209,7 @@
             </div>
         </div>
 
-        <div class="five violet" id="download">
+        <div class="five violet margin-bottom-60" id="download">
             <div class="container">
                 <div class="row margin-bottom-60">
                 </div>
@@ -231,7 +230,7 @@
         <li>
             <div class="form-group">
                 <label for="nombre" class="col-md-3 control-label">
-                    <span class="color-text-blue">Nombre:</label>
+                    <span >Nombre:</label>
                 <div class="col-md-9">
                   <input type="text" class="form-control required" name="nombre" />
                 </div>
@@ -240,7 +239,7 @@
         <li>
             <div class="form-group">
                 <label for="apellido" class="col-md-3 control-label">
-                    <span class="color-text-blue">Apellido:</label>
+                    <span >Apellido:</label>
                 <div class="col-md-9">
                   <input type="text" class="form-control required " name="apellido" />
                 </div>
@@ -249,7 +248,7 @@
         <li>
             <div class="form-group">
                 <label for="compania" class="col-md-3 control-label">
-                    <span class="color-text-blue">Compañia:</label>
+                    <span >Compañia:</label>
                 <div class="col-md-9">
                   <input type="text" class="form-control required" name="compania" />
                 </div>
@@ -258,7 +257,7 @@
         <li>
             <div class="form-group">
                 <label for="puesto" class="col-md-3 control-label">
-                    <span class="color-text-blue">Puesto:</label>
+                    <span >Puesto:</label>
                 <div class="col-md-9">
                   <input type="text" class="form-control required " name="puesto" />
                 </div>
@@ -267,7 +266,7 @@
         <li>
             <div class="form-group">
                 <label for="email" class="col-md-3 control-label">
-                    <span class="color-text-blue">Email:</label>
+                    <span >Email:</label>
                 <div class="col-md-9">
                   <input type="email" class="form-control required email " name="email" />
                 </div>
@@ -300,23 +299,47 @@
             </div>
         </div>
 
-        <div class="two white">
+        <div class="six white">
             <div class="container">
                 <div class="row">
-                    <div class="col-m-12 one-title-first margin-bottom-40 ">
-                        <h2>white footer</h2>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-m-12 margin-bottom-40 ">
+                                <h2 class="six-title ">FutureBrand</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-m-12 one-title-second margin-bottom-40 ">
+                                <p>
+                                The<br />
+                                creative<br />
+                                future<br />
+                                <span class="italic">com</span>pany.
+                                <p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-m-12 one-title-second margin-bottom-40 ">
-                        <p>
-                        The<br />
-                        creative<br />
-                        future<br />
-                        company.
-                        <p>
+                    <div class="col-md-8">
+<div class="direction">
+FutureBrand Lima<br />
+Tel. 511 652 7700<br />
+Enrique Meiggs 150 of 302<br />
+Miraflores<br />
+Lima<br />
+Peru<br />
+<br />
+lima@futurebrand.com<br />
+<br />
+http://www.futurebrand.com/<br />
+http://fblog.futurebrand.com/<br />
+</div>
+
                     </div>
+
                 </div>
+
+
+
             </div>
         </div>
 
