fix css btn-default:focus>active

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=adaaa3">
+    <link rel="stylesheet" href="assets/css/style.css?a=333">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -277,7 +277,7 @@
             <div class="form-group">
                 <div class="col-md-12 text-center">
                     <button type="submit" 
-                    class="btn btn-default btn-send">Enviar</button>
+                    class="btn btn-send">Enviar</button>
                 </div>
             </div>
         </li>
