obs logo to image and tsmall text

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=iiiaa">
+    <link rel="stylesheet" href="assets/css/style.css?a=asadae">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -14,20 +14,12 @@
         <div class="one sky">
             <div class="container">
                 <div class="row margin-bottom-20">
-                    <div class="col-md-12 one-title-first margin-bottom-20 ">
-                        <h2>FutureBrand</h2>
+                    <div class="col-md-12 one-title-first margin-bottom-50 ">
+                        <a href="javascript::void()"><img src="assets/img/futurebrand.png" alt="Future Brand"></a>
+                        <h1 class="hide">FutureBrand</h1>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12 one-title-second margin-bottom-40 ">
-                        <p>
-                        The<br />
-                        creative<br />
-                        future<br />
-                        <span class="sub-line">com</span>pany.
-                        <p>
-                    </div>
-                </div>
+
                 <div class="row">
                     <div class="col-md-12 one-title-third margin-bottom-30 ">
                         <h1>Las marcas peruanas del futuro</h1>
@@ -383,37 +375,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="row">
-                            <div class="col-m-12 margin-bottom-40 ">
-                                <h2 class="six-title ">FutureBrand</h2>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-m-12 one-title-second margin-bottom-40 ">
-                                <p>
-                                The<br />
-                                creative<br />
-                                future<br />
-                                <span class="italic">com</span>pany.
-                                <p>
+                        <div class="row margin-bottom-20">
+                            <div class="col-md-12 one-title-first margin-bottom-50 ">
+                                <a href="javascript::void()"><img src="assets/img/futurebrand.png" alt="Future Brand"></a>
+                                <h1 class="hide">FutureBrand</h1>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-8">
-<div class="direction">
-FutureBrand Lima<br />
-Tel. 511 652 7700<br />
-Enrique Meiggs 150 of 302<br />
-Miraflores<br />
-Lima<br />
-Peru<br />
-<br />
-lima@futurebrand.com<br />
-<br />
-http://www.futurebrand.com/<br />
-http://fblog.futurebrand.com/<br />
-</div>
-
+                        <div class="direction">
+                        FutureBrand Lima<br />
+                        Tel. 511 652 7700<br />
+                        Enrique Meiggs 150 of 302<br />
+                        Miraflores<br />
+                        Lima<br />
+                        Peru<br />
+                        <br />
+                        lima@futurebrand.com<br />
+                        <br />
+                        http://www.futurebrand.com/<br />
+                        http://fblog.futurebrand.com/<br />
+                        </div>
                     </div>
 
                 </div>
