title in table no-landing

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=asadae">
+    <link rel="stylesheet" href="assets/css/style.css?a=a3e">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="one sky">
             <div class="container">
                 <div class="row margin-bottom-20">
-                    <div class="col-md-12 one-title-first margin-bottom-50 ">
+                    <div class="col-md-12 one-title-first logo margin-bottom-50 ">
                         <a href="javascript::void()"><img src="assets/img/futurebrand.png" alt="Future Brand"></a>
                         <h1 class="hide">FutureBrand</h1>
                     </div>
@@ -209,6 +209,7 @@
                         <div>
                             <img class="img-responsive" src="assets/img/tabla.jpg" alt="tabla hallazgos">
                         </div>
+                        <p class="text-litle">* Ranking América Economía de las 500 mayores empresas del Perú- 2014</p>
                     </div>                    
                     <div class="col-md-1"></div>
                 </div>
