--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css?a=2225">
+    <link rel="stylesheet" href="assets/css/style.min.css?a=2225">
     <title>Las marcas peruanas del futuro</title>
 </head>
 <body>
